<resources>
    <string name="app_name">LoginWithAnimation</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Mau belajar Android, iOS, Machine Learning, Cloud, Front-End, Back-End, dan bidang IT lainnya? Di Dicoding aja!</string>
    <string name="title_welcome_page">Selamat datang di Dicoding!</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Sudah siap untuk upgrade skill?</string>
    <string name="name">Nama</string>
    <string name="message_main_page">Selamat Belajar di Dicoding.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Logout</string>
    <string name="test_untuk_detail_deskripsi">test untuk detail deskripsi</string>
    <string name="test_username_detail">test username detail</string>
    <string name="upload">Upload</string>
    <string name="galery">Galery</string>
    <string name="camera">Camera</string>
    <string name="masukkan_teks_deskripsi">Masukkan teks deskripsi</string>
    <string name="upload_story">upload story</string>
    <string name="empty_image_warning">gambar kosong</string>
    <string name="title_activity_mapsactifity">mapsactifity</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="maps">maps</string>
    <string name="eror">eror bang</string>
</resources>