<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="5dp"
    tools:context=".view.upload.Upload_story">

    <TextView
        android:id="@+id/textView"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/upload_story"
        android:textSize="24sp"
        android:textStyle="bold" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/previewImageView"
                android:layout_width="match_parent"
                android:layout_height="375dp"
                android:src="@drawable/ic_place_holder" />


            <EditText
                android:id="@+id/inputEditText"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/edt_shape"
                android:gravity="start"
                android:hint="@string/masukkan_teks_deskripsi"
                android:inputType="textMultiLine"
                android:padding="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cameraButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/camera" />

                <Button
                    android:id="@+id/galleryButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/galery" />

            </LinearLayout>

            <Button
                android:id="@+id/uploadButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/upload" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>